# secrets

./: Cargo.toml  DESIGN.md  README.md  SKILL.md  install.sh
crates/sx/: Cargo.toml
crates/sx-proto/: Cargo.toml
crates/sx-proto/src/: lib.rs
crates/sx/src/: main.rs  skill.rs
crates/sxd/: Cargo.toml  build.rs
crates/sxd/src/: config.rs  gate.rs  main.rs  peer.rs  service.rs  state.rs  touchid.m
examples/sandbox-demo/: README.md  sx-sandbox.sb  try.sh
