[workspace]
resolver = "2"
members = ["crates/sx-proto", "crates/sxd", "crates/sx"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/anas/secrets"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"

[profile.release]
strip = true
lto = true
