[package]
name = "sxd"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "sxd"
path = "src/main.rs"

[dependencies]
sx-proto = { path = "../sx-proto" }
serde_json.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
libc = "0.2.186"

[build-dependencies]
cc = "1.2.63"
